# System-Procedures-in-C

./: 98  README.md  current.txt  help
OS_X/automation_scripts/: CMakeLists.txt  automation_scripts  automation_scripts.c  automation_scripts.h  main.c  make.txt
OS_X/automation_scripts/automation_scripts.dSYM/Contents/: Info.plist
OS_X/automation_scripts/automation_scripts.dSYM/Contents/Resources/DWARF/: automation_scripts
OS_X/automation_scripts/include/system/: display_stream.h  windows.h
OS_X/automation_scripts/output/apple/lib/: libautomation_scripts.dylib  libautomation_scripts_shared.dylib
OS_X/automation_scripts/outputs/: Automation_Scripts_in_OS_X.cbp  Makefile  cmake_install.cmake
OS_X/automation_scripts/outputs/debug/lib/: libautomation_scripts.dylib
OS_X/automation_scripts/outputs/lib/apple/: libautomation_scripts.dylib
OS_X/automation_scripts/outputs/tools/SelectionView.app/Contents/: Info.plist
OS_X/automation_scripts/outputs/tools/SelectionView.app/Contents/Frameworks/: libswiftFoundation.dylib  libswiftXPC.dylib  libswiftos.dylib
OS_X/automation_scripts/src/: automation_scripts.c  main.c
OS_X/automation_scripts/src/system/: audio.c  display.c  display_stream.c  events.c  windows.c
OS_X/automation_scripts/system/: audio.c  audio.h  display.c  display.h  display_stream.c  display_stream.h  events.c  events.h  windows.c
OS_X/automation_scripts/test/: test_audio.c  test_audio.h  test_automation_scripts.c  test_automation_scripts.h  test_display.c  test_display.h  test_display_stream.c  test_display_stream.h  test_system_events.c  test_system_events.h  test_windows.c  test_windows.h
OS_X/automation_scripts/tools/SelectionView.app/Contents/Frameworks/: libswiftCoreData.dylib  libswiftCoreGraphics.dylib  libswiftDarwin.dylib  libswiftDispatch.dylib
OS_X/automation_scripts/tools/SelectionView.app/Contents/MacOS/: SelectionView
OS_X/cocoa_helper/: CMakeLists.txt  cocoa_helper  exec_cmd.c  file_system.c  file_system.h  images.c  images.h  main.c  make.txt  property_list.c  property_list.h  strings.c
OS_X/cocoa_helper/cocoa_helper.dSYM/Contents/Resources/DWARF/: cocoa_helper
OS_X/cocoa_helper/include/cocoa_helper/: exec_cmd.h  images.h  strings.h
OS_X/cocoa_helper/output/apple/lib/: libcocoa_helper_shared.dylib
OS_X/cocoa_helper/outputs/: Cocoa_Helper_in_OS_X.cbp  Makefile  cmake_install.cmake
OS_X/cocoa_helper/outputs/debug/lib/: libcocoa_helper.dylib
OS_X/cocoa_helper/outputs/lib/apple/: libcocoa_helper.dylib
OS_X/cocoa_helper/src/: main.c
OS_X/cocoa_helper/src/cocoa_helper/: exec_cmd.c  file_system.c  images.c  property_list.c  strings.c
OS_X/cocoa_helper/tools/: search_path_for_dir
OS_X/keyboard_events/: CMakeLists.txt  hot_keys_events.c  hot_keys_events.h  hotkey_events.c  hotkeys_events.h  keyboard_events  keyboard_events.c  keyboard_events.h  main.c  make.txt  symbolic_hot_keys.c  symbolic_hot_keys.h  symbolic_hotkeys.c  symbolic_hotkeys.h  virtual_key_codes.h
OS_X/keyboard_events/applications/acrobat_reader/: acrobat_reader_hot_keys_events.c  acrobat_reader_hot_keys_events.h
OS_X/keyboard_events/applications/iwork/: iwork_hot_keys_events.c  iwork_hot_keys_events.h
OS_X/keyboard_events/applications/opera/: opera_hot_keys_events.c  opera_hot_keys_events.h
OS_X/keyboard_events/applications/photos/: photos_hot_keys_events.c  photos_hot_keys_events.h
OS_X/keyboard_events/applications/preview/: preview_hot_keys_events.c  preview_hot_keys_events.h
OS_X/keyboard_events/include/: hot_keys_events.h  keyboard_events.h  symbolic_hot_keys.h  virtual_key_codes.h
OS_X/keyboard_events/keyboard_events.dSYM/Contents/: Info.plist
OS_X/keyboard_events/keyboard_events.dSYM/Contents/Resources/DWARF/: keyboard_events
OS_X/keyboard_events/output/apple/lib/: libkeyboard_events_shared.dylib
OS_X/keyboard_events/outputs/: Keyboard_Events_in_OS_X.cbp  Makefile  cmake_install.cmake
OS_X/keyboard_events/outputs/debug/lib/: libkeyboard_events.dylib
OS_X/keyboard_events/outputs/lib/apple/: libkeyboard_events.dylib
OS_X/keyboard_events/resources/: application_hotkeys.plist  system_hotkeys.plist
OS_X/keyboard_events/src/: hot_keys_events.c  keyboard_events.c  main.c  symbolic_hot_keys.c
OS_X/mouse_events/: CMakeLists.txt  main.c  make.txt  mouse_events  mouse_events.c  mouse_events.h  scroll_wheel_events.c  scroll_wheel_events.h
OS_X/mouse_events/include/: mouse_events.h
OS_X/mouse_events/mouse_events.dSYM/Contents/: Info.plist
OS_X/mouse_events/mouse_events.dSYM/Contents/Resources/DWARF/: mouse_events
OS_X/mouse_events/output/apple/lib/: libmouse_events.dylib  libmouse_events_shared.dylib
OS_X/mouse_events/outputs/: Makefile  Mouse_Events_in_OS_X.cbp  cmake_install.cmake
OS_X/mouse_events/outputs/debug/lib/: libmouse_events.dylib
OS_X/mouse_events/outputs/lib/apple/: libmouse_events.dylib
OS_X/mouse_events/src/: main.c
Windows/keyboard_events/: CMakeLists.txt  hot_keys_events.c  hot_keys_events.h  keyboard_events.c  keyboard_events.h  main.c  virtual_key_codes.h
Windows/keyboard_events/include/: hot_keys_events.h
Windows/keyboard_events/resources/: application_hotkeys.xml  system_hotkeys.xml
Windows/keyboard_events/src/: hot_keys_events.c  keyboard_events.c  main.c
Windows/mouse_events/: CMakeLists.txt  main.c  mouse_events.c  mouse_events.h  scroll_wheel_events.c  scroll_wheel_events.h
Windows/mouse_events/include/: scroll_wheel_events.h
Windows/mouse_events/outputs/: Makefile  Mouse_Events_in_Windows.cbp  cmake_install.cmake
Windows/windows_helpers/: CMakeLists.txt  main.c  windows.c  windows.h
Windows/windows_helpers/outputs/: Makefile  Windows_Helpers.cbp  cmake_install.cmake
Windows/windows_helpers/src/: main.c
Windows/windows_helpers/src/windows_helpers/: windows.c
exec_cmd/: CMakeLists.txt  exec_cmd  exec_cmd.c
hash_map/: CMakeLists.txt  hash_map  hash_map.c  hash_map.h  make.txt
hash_map/hash_map.dSYM/Contents/Resources/DWARF/: hash_map
